--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^12.0",
         "laravel/reverb": "^1.0",
         "laravel/tinker": "^2.10.1",
-        "livewire/livewire": "^4.0"
+        "livewire/livewire": "^4.0",
+        "stripe/stripe-php": "^19.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
